# coq-microprover

./: .gitignore  MicroProver.cabal  MicroProver.v  README.md
app/: Main.hs
interface/: FormulaLexer.hs  FormulaParser.hs
test/: MicroProverTest.hs
